--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" type="image/svg+xml" href="https://doctor-apoinment-system.vercel.app/CareQuickly-Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Booking System</title>
+    <title>CareQuickly</title>
   </head>
   <body>
     <div id="root"></div>
